fixed a bug related to creating a room

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="icon-wrapper">
-            <img src="{% static 'images/leave.svg' %}" alt="leave" class="control-icon" id="leave-btn">
+            <img src="{% static 'images/leave.png' %}" alt="leave" class="control-icon" id="leave-btn">
         </div>
 
     </section>
